--- a/studio.optinux.scraper/pom.xml
+++ b/studio.optinux.scraper/pom.xml
@@ -38,5 +38,11 @@
       <artifactId>poi</artifactId>
       <version>3.17</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
   </dependencies>
 </project>
