--- a/studio.optinux.scraper/pom.xml
+++ b/studio.optinux.scraper/pom.xml
@@ -3,7 +3,7 @@
   <groupId>studio.optinux.scraper</groupId>
   <artifactId>studio.optinux.scraper</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>studio.optinux.scraper</name>
   <url>https://optinux.studio/</url>
   <dependencies>
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>3.17</version>
+      <version>5.1.0</version>
     </dependency>
 
     <dependency>
@@ -36,13 +36,25 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>3.17</version>
+      <version>5.2.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.17.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.17.1</version>
     </dependency>
   </dependencies>
 </project>
